Fix alignment in PostImage.

--- a/src/components/Navigation/Journey/Journey.module.css
+++ b/src/components/Navigation/Journey/Journey.module.css
@@ -4,7 +4,7 @@
 }
 .JourneyText {
 	text-align: left;
-	font-size: 1.75vmax;
+	font-size: 1.5rem;
 }
 .JourneyPost {
 	width: 35vw;
@@ -93,12 +93,12 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	width: 68.5%;
+	width: 67%;
 }
 
 .buttonMedia {
 	height: 5vmax;
-	width: 32%;
+	width: 31%;
 	box-sizing: border-box;
 	background-color: #050111;
 	border-radius: 0.75vmax;
